--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
       # 3. Install dependencies
       # 'npm ci' is like 'npm install' but faster/safer for CI tools
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       # 4. Run the build (Vite build)
       - name: Build project
-        run: npm run build
+        run: npm run dev
